pkg/interface/lib/opt/lex_n_yacc/sdf_file.output
Terminals which are not used

   ONE_CONST
   ZERO_CONST


Grammar

    0 $accept: start $end

    1 start: initialize delay_file

    2 initialize: /* empty */

    3 delay_file: '(' DELAYFILE sdf_header cells ')'

    4 sdf_header: sdf_header design_name
    5           | sdf_header date
    6           | sdf_header vendor
    7           | sdf_header program_name
    8           | sdf_header program_version
    9           | sdf_header hierarchy_divider
   10           | sdf_header voltage
   11           | sdf_header process
   12           | sdf_header temperature
   13           | sdf_header time_scale
   14           | sdf_version

   15 sdf_version: '(' SDFVERSION QSTRING ')'

   16 design_name: '(' DESIGN QSTRING ')'

   17 date: '(' DATE QSTRING ')'

   18 vendor: '(' VENDOR QSTRING ')'

   19 program_name: '(' PROGRAM QSTRING ')'

   20 program_version: '(' VERSION QSTRING ')'

   21 hierarchy_divider: '(' DIVIDER hchar ')'

   22 hchar: '/'
   23      | '.'

   24 voltage: '(' VOLTAGE triple ')'
   25        | '(' VOLTAGE NUMBER ')'

   26 process: '(' PROCESS QSTRING ')'

   27 temperature: '(' TEMPERATURE triple ')'
   28            | '(' TEMPERATURE NUMBER ')'

   29 time_scale: '(' TIMESCALE tsvalue ')'

   30 tsvalue: NUMBER IDENTIFIER

   31 cells: cells cell
   32      | cell

   33 cell: '(' CELL add_cell ')'
   34     | '(' CELL add_cell timing_specs ')'

   35 add_cell: cell_type cell_instance

   36 cell_type: '(' CELLTYPE QSTRING ')'

   37 cell_instance: '(' INSTANCE ')'
   38              | '(' INSTANCE PATH ')'
   39              | '(' INSTANCE IDENTIFIER ')'
   40              | '(' INSTANCE '*' ')'

   41 timing_specs: timing_specs timing_spec
   42             | timing_spec

   43 timing_spec: del_spec
   44            | tc_spec
   45            | te_spec

   46 del_spec: '(' DELAY deltypes ')'

   47 deltypes: deltypes deltype
   48         | deltype

   49 tc_spec: '(' TIMINGCHECK tchk_defs ')'

   50 tchk_defs: tchk_defs tchk_def
   51          | tchk_def

   52 te_spec: '(' TIMINGENV te_defs ')'

   53 te_defs: te_defs te_def
   54        | te_def

   55 deltype: '(' pathtype del_path ')'
   56        | '(' valuetype del_defs ')'

   57 pathtype: PATHPULSE
   58         | PATHPULSEPERCENT

   59 valuetype: ABSOLUTE
   60          | INCREMENT

   61 del_path: value
   62         | input_output_path value
   63         | value value
   64         | input_output_path value value

   65 del_defs: del_defs del_def
   66         | del_def

   67 input_output_path: port_instance port_instance

   68 del_def: del_def_iopath
   69        | '(' del_cond del_def_iopath ')'
   70        | '(' cond_else_type del_def_iopath ')'
   71        | '(' PORT port_instance delval_list ')'
   72        | '(' INTERCONNECT port_instance port_instance delval_list ')'
   73        | '(' DEVICE delval_list ')'
   74        | '(' DEVICE port_instance delval_list ')'

   75 del_cond: COND expression
   76         | COND QSTRING expression

   77 del_def_iopath: '(' IOPATH port_spec port_instance delval_list ')'
   78               | '(' IOPATH port_spec port_instance '(' RETAIN delval_list ')' ')'

   79 cond_else_type: CONDELSE

   80 tchk_def: '(' SETUP port_tchk port_tchk value ')'
   81         | '(' HOLD port_tchk port_tchk value ')'
   82         | '(' SETUPHOLD port_tchk port_tchk value value ')'
   83         | '(' SETUPHOLD port_tchk port_tchk value value scond ')'
   84         | '(' SETUPHOLD port_tchk port_tchk value value ccond ')'
   85         | '(' SETUPHOLD port_tchk port_tchk value value scond ccond ')'
   86         | '(' RECOVERY port_tchk port_tchk value ')'
   87         | '(' REMOVAL port_tchk port_tchk value ')'
   88         | '(' RECREM port_tchk port_tchk value value ')'
   89         | '(' RECREM port_tchk port_tchk value value scond ')'
   90         | '(' RECREM port_tchk port_tchk value value ccond ')'
   91         | '(' RECREM port_tchk port_tchk value value scond ccond ')'
   92         | '(' SKEW port_tchk port_tchk value ')'
   93         | '(' WIDTH port_tchk value ')'
   94         | '(' PERIOD port_tchk value ')'
   95         | '(' NOCHANGE port_tchk port_tchk value value ')'

   96 port_tchk: port_spec
   97          | '(' COND timing_check_condition port_spec ')'
   98          | '(' COND QSTRING timing_check_condition port_spec ')'

   99 scond: '(' SCOND timing_check_condition ')'
  100      | '(' SCOND QSTRING timing_check_condition ')'

  101 ccond: '(' CCOND timing_check_condition ')'
  102      | '(' CCOND QSTRING timing_check_condition ')'

  103 name: '(' NAME ')'
  104     | '(' NAME QSTRING ')'

  105 exception: '(' EXCEPTION cell_instances ')'

  106 cell_instances: cell_instances cell_instance
  107               | cell_instance

  108 te_def: cns_def
  109       | tenv_def

  110 cns_def: '(' PATHCONSTRAINT port_instance port_instances value value ')'
  111        | '(' PATHCONSTRAINT name port_instance port_instances value value ')'
  112        | '(' PERIODCONSTRAINT port_instance value ')'
  113        | '(' PERIODCONSTRAINT port_instance value exception ')'
  114        | '(' SUM constraint_path constraint_path value ')'
  115        | '(' SUM constraint_path constraint_path value value ')'
  116        | '(' SUM constraint_path constraint_path constraint_paths value ')'
  117        | '(' SUM constraint_path constraint_path constraint_paths value value ')'
  118        | '(' DIFF constraint_path constraint_path value ')'
  119        | '(' DIFF constraint_path constraint_path value value ')'
  120        | '(' SKEWCONSTRAINT port_spec value ')'

  121 port_instances: port_instances port_instance
  122               | port_instance

  123 constraint_paths: constraint_paths constraint_path
  124                 | constraint_path

  125 tenv_def: '(' ARRIVAL port_instance value value value value ')'
  126         | '(' ARRIVAL port_edge port_instance value value value value ')'
  127         | '(' DEPARTURE port_instance value value value value ')'
  128         | '(' DEPARTURE port_edge port_instance value value value value ')'
  129         | '(' SLACK port_instance value value value value ')'
  130         | '(' SLACK port_instance value value value value NUMBER ')'
  131         | '(' WAVEFORM port_instance NUMBER edge_list ')'

  132 number_q: NUMBER
  133         | /* empty */

  134 constraint_path: '(' port_instance port_instance ')'

  135 port_spec: port_instance
  136          | port_edge

  137 port_edge: '(' edge_identifier port_instance ')'

  138 edge_identifier: POSEDGE
  139                | NEGEDGE
  140                | EDGE
  141                | IDENTIFIER
  142                | NUMBER

  143 port_instance: port

  144 port: scalar_port
  145     | bus_port

  146 scalar_port: IDENTIFIER
  147            | PATH
  148            | IDENTIFIER '[' NUMBER ']'
  149            | PATH '[' NUMBER ']'

  150 bus_port: IDENTIFIER '[' NUMBER ':' NUMBER ']'
  151         | PATH '[' NUMBER ':' NUMBER ']'

  152 edge_list: pos_pairs
  153          | neg_pairs

  154 pos_pairs: pos_pairs pos_pair
  155          | pos_pair

  156 neg_pairs: neg_pairs neg_pair
  157          | neg_pair

  158 pos_pair: '(' POSEDGE NUMBER number_q ')' '(' NEGEDGE NUMBER number_q ')'

  159 neg_pair: '(' NEGEDGE NUMBER number_q ')' '(' POSEDGE NUMBER number_q ')'

  160 value: '(' NUMBER ')'
  161      | '(' triple ')'
  162      | '(' ')'

  163 triple: NUMBER ':' ':'
  164       | NUMBER ':' NUMBER ':'
  165       | NUMBER ':' ':' NUMBER
  166       | ':' NUMBER ':'
  167       | ':' NUMBER ':' NUMBER
  168       | ':' ':' NUMBER
  169       | NUMBER ':' NUMBER ':' NUMBER

  170 delval: value
  171       | '(' value value ')'
  172       | '(' value value value ')'

  173 delval_list: delval
  174            | delval delval
  175            | delval delval delval
  176            | delval delval delval delval delval delval
  177            | delval delval delval delval delval delval delval delval delval delval delval delval

  178 expression: conditional_expression
  179           | '{' conditional_expression '}'
  180           | '{' expression ',' conditional_expression '}'

  181 conditional_expression: simple_expression
  182                       | simple_expression '?' expression ':' conditional_expression

  183 simple_expression: '(' simple_expression ')'
  184                  | unary_op '(' simple_expression ')'
  185                  | port
  186                  | unary_op port
  187                  | scalar_constant
  188                  | unary_op scalar_constant
  189                  | binary_expression

  190 binary_expression: simple_expression '+' simple_expression
  191                  | simple_expression '-' simple_expression
  192                  | simple_expression '*' simple_expression
  193                  | simple_expression '/' simple_expression
  194                  | simple_expression '%' simple_expression
  195                  | simple_expression EQU simple_expression
  196                  | simple_expression INEQU simple_expression
  197                  | simple_expression CASE_EQU simple_expression
  198                  | simple_expression CASE_INEQU simple_expression
  199                  | simple_expression L_AND simple_expression
  200                  | simple_expression L_OR simple_expression
  201                  | simple_expression '<' simple_expression
  202                  | simple_expression LESS_OR_EQU simple_expression
  203                  | simple_expression '>' simple_expression
  204                  | simple_expression GREATER_OR_EQU simple_expression
  205                  | simple_expression '&' simple_expression
  206                  | simple_expression '^' simple_expression
  207                  | simple_expression '|' simple_expression
  208                  | simple_expression RIGHT_SHIFT simple_expression
  209                  | simple_expression LEFT_SHIFT simple_expression

  210 timing_check_condition: scalar_node
  211                       | inv_op scalar_node
  212                       | scalar_node equ_op scalar_constant

  213 scalar_node: scalar_port

  214 scalar_constant: BIT_CONST
  215                | NUMBER

  216 unary_op: '+'
  217         | '-'
  218         | '!'
  219         | '~'
  220         | '&'
  221         | U_NAND
  222         | '|'
  223         | U_NOR
  224         | '^'
  225         | U_XNOR
  226         | U_XNOR_ALT

  227 inv_op: '!'
  228       | '~'

  229 equ_op: EQU
  230       | INEQU
  231       | CASE_EQU
  232       | CASE_INEQU


Terminals, with rules where they appear

$end (0) 0
'!' (33) 218 227
'%' (37) 194
'&' (38) 205 220
'(' (40) 3 15 16 17 18 19 20 21 24 25 26 27 28 29 33 34 36 37 38 39
    40 46 49 52 55 56 69 70 71 72 73 74 77 78 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95 97 98 99 100 101 102 103 104 105 110
    111 112 113 114 115 116 117 118 119 120 125 126 127 128 129 130
    131 134 137 158 159 160 161 162 171 172 183 184
')' (41) 3 15 16 17 18 19 20 21 24 25 26 27 28 29 33 34 36 37 38 39
    40 46 49 52 55 56 69 70 71 72 73 74 77 78 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95 97 98 99 100 101 102 103 104 105 110
    111 112 113 114 115 116 117 118 119 120 125 126 127 128 129 130
    131 134 137 158 159 160 161 162 171 172 183 184
'*' (42) 40 192
'+' (43) 190 216
',' (44) 180
'-' (45) 191 217
'.' (46) 23
'/' (47) 22 193
':' (58) 150 151 163 164 165 166 167 168 169 182
'<' (60) 201
'>' (62) 203
'?' (63) 182
'[' (91) 148 149 150 151
']' (93) 148 149 150 151
'^' (94) 206 224
'{' (123) 179 180
'|' (124) 207 222
'}' (125) 179 180
'~' (126) 219 228
error (256)
DELAYFILE (258) 3
SDFVERSION (259) 15
DESIGN (260) 16
DATE (261) 17
VENDOR (262) 18
PROGRAM (263) 19
VERSION (264) 20
DIVIDER (265) 21
VOLTAGE (266) 24 25
PROCESS (267) 26
TEMPERATURE (268) 27 28
TIMESCALE (269) 29
CELL (270) 33 34
CELLTYPE (271) 36
INSTANCE (272) 37 38 39 40
DELAY (273) 46
TIMINGCHECK (274) 49
TIMINGENV (275) 52
PATHPULSE (276) 57
PATHPULSEPERCENT (277) 58
ABSOLUTE (278) 59
INCREMENT (279) 60
IOPATH (280) 77 78
RETAIN (281) 78
COND (282) 75 76 97 98
SCOND (283) 99 100
CCOND (284) 101 102
CONDELSE (285) 79
PORT (286) 71
INTERCONNECT (287) 72
DEVICE (288) 73 74
SETUP (289) 80
HOLD (290) 81
SETUPHOLD (291) 82 83 84 85
RECOVERY (292) 86
REMOVAL (293) 87
RECREM (294) 88 89 90 91
SKEW (295) 92
WIDTH (296) 93
PERIOD (297) 94
NOCHANGE (298) 95
NAME (299) 103 104
EXCEPTION (300) 105
PATHCONSTRAINT (301) 110 111
PERIODCONSTRAINT (302) 112 113
SUM (303) 114 115 116 117
DIFF (304) 118 119
SKEWCONSTRAINT (305) 120
ARRIVAL (306) 125 126
DEPARTURE (307) 127 128
SLACK (308) 129 130
WAVEFORM (309) 131
POSEDGE (310) 138 158 159
NEGEDGE (311) 139 158 159
CASE_EQU (312) 197 231
CASE_INEQU (313) 198 232
EQU (314) 195 229
INEQU (315) 196 230
L_AND (316) 199
L_OR (317) 200
LESS_OR_EQU (318) 202
GREATER_OR_EQU (319) 204
RIGHT_SHIFT (320) 208
LEFT_SHIFT (321) 209
U_NAND (322) 221
U_NOR (323) 223
U_XNOR (324) 225
U_XNOR_ALT (325) 226
BIT_CONST (326) 214
ONE_CONST (327)
ZERO_CONST (328)
EDGE (329) 140
PATH (330) 38 147 149 151
IDENTIFIER (331) 30 39 141 146 148 150
QSTRING (332) 15 16 17 18 19 20 26 36 76 98 100 102 104
NUMBER (333) 25 28 30 130 131 132 142 148 149 150 151 158 159 160 163
    164 165 166 167 168 169 215


Nonterminals, with rules where they appear

$accept (101)
    on left: 0
start (102)
    on left: 1, on right: 0
initialize (103)
    on left: 2, on right: 1
delay_file (104)
    on left: 3, on right: 1
sdf_header (105)
    on left: 4 5 6 7 8 9 10 11 12 13 14, on right: 3 4 5 6 7 8 9 10
    11 12 13
sdf_version (106)
    on left: 15, on right: 14
design_name (107)
    on left: 16, on right: 4
date (108)
    on left: 17, on right: 5
vendor (109)
    on left: 18, on right: 6
program_name (110)
    on left: 19, on right: 7
program_version (111)
    on left: 20, on right: 8
hierarchy_divider (112)
    on left: 21, on right: 9
hchar (113)
    on left: 22 23, on right: 21
voltage (114)
    on left: 24 25, on right: 10
process (115)
    on left: 26, on right: 11
temperature (116)
    on left: 27 28, on right: 12
time_scale (117)
    on left: 29, on right: 13
tsvalue (118)
    on left: 30, on right: 29
cells (119)
    on left: 31 32, on right: 3 31
cell (120)
    on left: 33 34, on right: 31 32
add_cell (121)
    on left: 35, on right: 33 34
cell_type (122)
    on left: 36, on right: 35
cell_instance (123)
    on left: 37 38 39 40, on right: 35 106 107
timing_specs (124)
    on left: 41 42, on right: 34 41
timing_spec (125)
    on left: 43 44 45, on right: 41 42
del_spec (126)
    on left: 46, on right: 43
deltypes (127)
    on left: 47 48, on right: 46 47
tc_spec (128)
    on left: 49, on right: 44
tchk_defs (129)
    on left: 50 51, on right: 49 50
te_spec (130)
    on left: 52, on right: 45
te_defs (131)
    on left: 53 54, on right: 52 53
deltype (132)
    on left: 55 56, on right: 47 48
pathtype (133)
    on left: 57 58, on right: 55
valuetype (134)
    on left: 59 60, on right: 56
del_path (135)
    on left: 61 62 63 64, on right: 55
del_defs (136)
    on left: 65 66, on right: 56 65
input_output_path (137)
    on left: 67, on right: 62 64
del_def (138)
    on left: 68 69 70 71 72 73 74, on right: 65 66
del_cond (139)
    on left: 75 76, on right: 69
del_def_iopath (140)
    on left: 77 78, on right: 68 69 70
cond_else_type (141)
    on left: 79, on right: 70
tchk_def (142)
    on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95,
    on right: 50 51
port_tchk (143)
    on left: 96 97 98, on right: 80 81 82 83 84 85 86 87 88 89 90 91
    92 93 94 95
scond (144)
    on left: 99 100, on right: 83 85 89 91
ccond (145)
    on left: 101 102, on right: 84 85 90 91
name (146)
    on left: 103 104, on right: 111
exception (147)
    on left: 105, on right: 113
cell_instances (148)
    on left: 106 107, on right: 105 106
te_def (149)
    on left: 108 109, on right: 53 54
cns_def (150)
    on left: 110 111 112 113 114 115 116 117 118 119 120,
    on right: 108
port_instances (151)
    on left: 121 122, on right: 110 111 121
constraint_paths (152)
    on left: 123 124, on right: 116 117 123
tenv_def (153)
    on left: 125 126 127 128 129 130 131, on right: 109
number_q (154)
    on left: 132 133, on right: 158 159
constraint_path (155)
    on left: 134, on right: 114 115 116 117 118 119 123 124
port_spec (156)
    on left: 135 136, on right: 77 78 96 97 98 120
port_edge (157)
    on left: 137, on right: 126 128 136
edge_identifier (158)
    on left: 138 139 140 141 142, on right: 137
port_instance (159)
    on left: 143, on right: 67 71 72 74 77 78 110 111 112 113 121 122
    125 126 127 128 129 130 131 134 135 137
port (160)
    on left: 144 145, on right: 143 185 186
scalar_port (161)
    on left: 146 147 148 149, on right: 144 213
bus_port (162)
    on left: 150 151, on right: 145
edge_list (163)
    on left: 152 153, on right: 131
pos_pairs (164)
    on left: 154 155, on right: 152 154
neg_pairs (165)
    on left: 156 157, on right: 153 156
pos_pair (166)
    on left: 158, on right: 154 155
neg_pair (167)
    on left: 159, on right: 156 157
value (168)
    on left: 160 161 162, on right: 61 62 63 64 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95 110 111 112 113 114 115 116 117 118
    119 120 125 126 127 128 129 130 170 171 172
triple (169)
    on left: 163 164 165 166 167 168 169, on right: 24 27 161
delval (170)
    on left: 170 171 172, on right: 173 174 175 176 177
delval_list (171)
    on left: 173 174 175 176 177, on right: 71 72 73 74 77 78
expression (172)
    on left: 178 179 180, on right: 75 76 180 182
conditional_expression (173)
    on left: 181 182, on right: 178 179 180 182
simple_expression (174)
    on left: 183 184 185 186 187 188 189, on right: 181 182 183 184
    190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205
    206 207 208 209
binary_expression (175)
    on left: 190 191 192 193 194 195 196 197 198 199 200 201 202 203
    204 205 206 207 208 209, on right: 189
timing_check_condition (176)
    on left: 210 211 212, on right: 97 98 99 100 101 102
scalar_node (177)
    on left: 213, on right: 210 211 212
scalar_constant (178)
    on left: 214 215, on right: 187 188 212
unary_op (179)
    on left: 216 217 218 219 220 221 222 223 224 225 226,
    on right: 184 186 188
inv_op (180)
    on left: 227 228, on right: 211
equ_op (181)
    on left: 229 230 231 232, on right: 212


state 0

    0 $accept: . start $end

    $default  reduce using rule 2 (initialize)

    start       go to state 1
    initialize  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: initialize . delay_file

    '('  shift, and go to state 4

    delay_file  go to state 5


state 3

    0 $accept: start $end .

    $default  accept


state 4

    3 delay_file: '(' . DELAYFILE sdf_header cells ')'

    DELAYFILE  shift, and go to state 6


state 5

    1 start: initialize delay_file .

    $default  reduce using rule 1 (start)


state 6

    3 delay_file: '(' DELAYFILE . sdf_header cells ')'

    '('  shift, and go to state 7

    sdf_header   go to state 8
    sdf_version  go to state 9


state 7

   15 sdf_version: '(' . SDFVERSION QSTRING ')'

    SDFVERSION  shift, and go to state 10


state 8

    3 delay_file: '(' DELAYFILE sdf_header . cells ')'
    4 sdf_header: sdf_header . design_name
    5           | sdf_header . date
    6           | sdf_header . vendor
    7           | sdf_header . program_name
    8           | sdf_header . program_version
    9           | sdf_header . hierarchy_divider
   10           | sdf_header . voltage
   11           | sdf_header . process
   12           | sdf_header . temperature
   13           | sdf_header . time_scale

    '('  shift, and go to state 11

    design_name        go to state 12
    date               go to state 13
    vendor             go to state 14
    program_name       go to state 15
    program_version    go to state 16
    hierarchy_divider  go to state 17
    voltage            go to state 18
    process            go to state 19
    temperature        go to state 20
    time_scale         go to state 21
    cells              go to state 22
    cell               go to state 23


state 9

   14 sdf_header: sdf_version .

    $default  reduce using rule 14 (sdf_header)


state 10

   15 sdf_version: '(' SDFVERSION . QSTRING ')'

    QSTRING  shift, and go to state 24


state 11

   16 design_name: '(' . DESIGN QSTRING ')'
   17 date: '(' . DATE QSTRING ')'
   18 vendor: '(' . VENDOR QSTRING ')'
   19 program_name: '(' . PROGRAM QSTRING ')'
   20 program_version: '(' . VERSION QSTRING ')'
   21 hierarchy_divider: '(' . DIVIDER hchar ')'
   24 voltage: '(' . VOLTAGE triple ')'
   25        | '(' . VOLTAGE NUMBER ')'
   26 process: '(' . PROCESS QSTRING ')'
   27 temperature: '(' . TEMPERATURE triple ')'
   28            | '(' . TEMPERATURE NUMBER ')'
   29 time_scale: '(' . TIMESCALE tsvalue ')'
   33 cell: '(' . CELL add_cell ')'
   34     | '(' . CELL add_cell timing_specs ')'

    DESIGN       shift, and go to state 25
    DATE         shift, and go to state 26
    VENDOR       shift, and go to state 27
    PROGRAM      shift, and go to state 28
    VERSION      shift, and go to state 29
    DIVIDER      shift, and go to state 30
    VOLTAGE      shift, and go to state 31
    PROCESS      shift, and go to state 32
    TEMPERATURE  shift, and go to state 33
    TIMESCALE    shift, and go to state 34
    CELL         shift, and go to state 35


state 12

    4 sdf_header: sdf_header design_name .

    $default  reduce using rule 4 (sdf_header)


state 13

    5 sdf_header: sdf_header date .

    $default  reduce using rule 5 (sdf_header)


state 14

    6 sdf_header: sdf_header vendor .

    $default  reduce using rule 6 (sdf_header)


state 15

    7 sdf_header: sdf_header program_name .

    $default  reduce using rule 7 (sdf_header)


state 16

    8 sdf_header: sdf_header program_version .

    $default  reduce using rule 8 (sdf_header)


state 17

    9 sdf_header: sdf_header hierarchy_divider .

    $default  reduce using rule 9 (sdf_header)


state 18

   10 sdf_header: sdf_header voltage .

    $default  reduce using rule 10 (sdf_header)


state 19

   11 sdf_header: sdf_header process .

    $default  reduce using rule 11 (sdf_header)


state 20

   12 sdf_header: sdf_header temperature .

    $default  reduce using rule 12 (sdf_header)


state 21

   13 sdf_header: sdf_header time_scale .

    $default  reduce using rule 13 (sdf_header)


state 22

    3 delay_file: '(' DELAYFILE sdf_header cells . ')'
   31 cells: cells . cell

    '('  shift, and go to state 36
    ')'  shift, and go to state 37

    cell  go to state 38


state 23

   32 cells: cell .

    $default  reduce using rule 32 (cells)


state 24

   15 sdf_version: '(' SDFVERSION QSTRING . ')'

    ')'  shift, and go to state 39


state 25

   16 design_name: '(' DESIGN . QSTRING ')'

    QSTRING  shift, and go to state 40


state 26

   17 date: '(' DATE . QSTRING ')'

    QSTRING  shift, and go to state 41


state 27

   18 vendor: '(' VENDOR . QSTRING ')'

    QSTRING  shift, and go to state 42


state 28

   19 program_name: '(' PROGRAM . QSTRING ')'

    QSTRING  shift, and go to state 43


state 29

   20 program_version: '(' VERSION . QSTRING ')'

    QSTRING  shift, and go to state 44


state 30

   21 hierarchy_divider: '(' DIVIDER . hchar ')'

    '/'  shift, and go to state 45
    '.'  shift, and go to state 46

    hchar  go to state 47


state 31

   24 voltage: '(' VOLTAGE . triple ')'
   25        | '(' VOLTAGE . NUMBER ')'

    NUMBER  shift, and go to state 48
    ':'     shift, and go to state 49

    triple  go to state 50


state 32

   26 process: '(' PROCESS . QSTRING ')'

    QSTRING  shift, and go to state 51


state 33

   27 temperature: '(' TEMPERATURE . triple ')'
   28            | '(' TEMPERATURE . NUMBER ')'

    NUMBER  shift, and go to state 52
    ':'     shift, and go to state 49

    triple  go to state 53


state 34

   29 time_scale: '(' TIMESCALE . tsvalue ')'

    NUMBER  shift, and go to state 54

    tsvalue  go to state 55


state 35

   33 cell: '(' CELL . add_cell ')'
   34     | '(' CELL . add_cell timing_specs ')'

    '('  shift, and go to state 56

    add_cell   go to state 57
    cell_type  go to state 58


state 36

   33 cell: '(' . CELL add_cell ')'
   34     | '(' . CELL add_cell timing_specs ')'

    CELL  shift, and go to state 35


state 37

    3 delay_file: '(' DELAYFILE sdf_header cells ')' .

    $default  reduce using rule 3 (delay_file)


state 38

   31 cells: cells cell .

    $default  reduce using rule 31 (cells)


state 39

   15 sdf_version: '(' SDFVERSION QSTRING ')' .

    $default  reduce using rule 15 (sdf_version)


state 40

   16 design_name: '(' DESIGN QSTRING . ')'

    ')'  shift, and go to state 59


state 41

   17 date: '(' DATE QSTRING . ')'

    ')'  shift, and go to state 60


state 42

   18 vendor: '(' VENDOR QSTRING . ')'

    ')'  shift, and go to state 61


state 43

   19 program_name: '(' PROGRAM QSTRING . ')'

    ')'  shift, and go to state 62


state 44

   20 program_version: '(' VERSION QSTRING . ')'

    ')'  shift, and go to state 63


state 45

   22 hchar: '/' .

    $default  reduce using rule 22 (hchar)


state 46

   23 hchar: '.' .

    $default  reduce using rule 23 (hchar)


state 47

   21 hierarchy_divider: '(' DIVIDER hchar . ')'

    ')'  shift, and go to state 64


state 48

   25 voltage: '(' VOLTAGE NUMBER . ')'
  163 triple: NUMBER . ':' ':'
  164       | NUMBER . ':' NUMBER ':'
  165       | NUMBER . ':' ':' NUMBER
  169       | NUMBER . ':' NUMBER ':' NUMBER

    ')'  shift, and go to state 65
    ':'  shift, and go to state 66


state 49

  166 triple: ':' . NUMBER ':'
  167       | ':' . NUMBER ':' NUMBER
  168       | ':' . ':' NUMBER

    NUMBER  shift, and go to state 67
    ':'     shift, and go to state 68


state 50

   24 voltage: '(' VOLTAGE triple . ')'

    ')'  shift, and go to state 69


state 51

   26 process: '(' PROCESS QSTRING . ')'

    ')'  shift, and go to state 70


state 52

   28 temperature: '(' TEMPERATURE NUMBER . ')'
  163 triple: NUMBER . ':' ':'
  164       | NUMBER . ':' NUMBER ':'
  165       | NUMBER . ':' ':' NUMBER
  169       | NUMBER . ':' NUMBER ':' NUMBER

    ')'  shift, and go to state 71
    ':'  shift, and go to state 66


state 53

   27 temperature: '(' TEMPERATURE triple . ')'

    ')'  shift, and go to state 72


state 54

   30 tsvalue: NUMBER . IDENTIFIER

    IDENTIFIER  shift, and go to state 73


state 55

   29 time_scale: '(' TIMESCALE tsvalue . ')'

    ')'  shift, and go to state 74


state 56

   36 cell_type: '(' . CELLTYPE QSTRING ')'

    CELLTYPE  shift, and go to state 75


state 57

   33 cell: '(' CELL add_cell . ')'
   34     | '(' CELL add_cell . timing_specs ')'

    '('  shift, and go to state 76
    ')'  shift, and go to state 77

    timing_specs  go to state 78
    timing_spec   go to state 79
    del_spec      go to state 80
    tc_spec       go to state 81
    te_spec       go to state 82


state 58

   35 add_cell: cell_type . cell_instance

    '('  shift, and go to state 83

    cell_instance  go to state 84


state 59

   16 design_name: '(' DESIGN QSTRING ')' .

    $default  reduce using rule 16 (design_name)


state 60

   17 date: '(' DATE QSTRING ')' .

    $default  reduce using rule 17 (date)


state 61

   18 vendor: '(' VENDOR QSTRING ')' .

    $default  reduce using rule 18 (vendor)


state 62

   19 program_name: '(' PROGRAM QSTRING ')' .

    $default  reduce using rule 19 (program_name)


state 63

   20 program_version: '(' VERSION QSTRING ')' .

    $default  reduce using rule 20 (program_version)


state 64

   21 hierarchy_divider: '(' DIVIDER hchar ')' .

    $default  reduce using rule 21 (hierarchy_divider)


state 65

   25 voltage: '(' VOLTAGE NUMBER ')' .

    $default  reduce using rule 25 (voltage)


state 66

  163 triple: NUMBER ':' . ':'
  164       | NUMBER ':' . NUMBER ':'
  165       | NUMBER ':' . ':' NUMBER
  169       | NUMBER ':' . NUMBER ':' NUMBER

    NUMBER  shift, and go to state 85
    ':'     shift, and go to state 86


state 67

  166 triple: ':' NUMBER . ':'
  167       | ':' NUMBER . ':' NUMBER

    ':'  shift, and go to state 87


state 68

  168 triple: ':' ':' . NUMBER

    NUMBER  shift, and go to state 88


state 69

   24 voltage: '(' VOLTAGE triple ')' .

    $default  reduce using rule 24 (voltage)


state 70

   26 process: '(' PROCESS QSTRING ')' .

    $default  reduce using rule 26 (process)


state 71

   28 temperature: '(' TEMPERATURE NUMBER ')' .

    $default  reduce using rule 28 (temperature)


state 72

   27 temperature: '(' TEMPERATURE triple ')' .

    $default  reduce using rule 27 (temperature)


state 73

   30 tsvalue: NUMBER IDENTIFIER .

    $default  reduce using rule 30 (tsvalue)


state 74

   29 time_scale: '(' TIMESCALE tsvalue ')' .

    $default  reduce using rule 29 (time_scale)


state 75

   36 cell_type: '(' CELLTYPE . QSTRING ')'

    QSTRING  shift, and go to state 89


state 76

   46 del_spec: '(' . DELAY deltypes ')'
   49 tc_spec: '(' . TIMINGCHECK tchk_defs ')'
   52 te_spec: '(' . TIMINGENV te_defs ')'

    DELAY        shift, and go to state 90
    TIMINGCHECK  shift, and go to state 91
    TIMINGENV    shift, and go to state 92


state 77

   33 cell: '(' CELL add_cell ')' .

    $default  reduce using rule 33 (cell)


state 78

   34 cell: '(' CELL add_cell timing_specs . ')'
   41 timing_specs: timing_specs . timing_spec

    '('  shift, and go to state 76
    ')'  shift, and go to state 93

    timing_spec  go to state 94
    del_spec     go to state 80
    tc_spec      go to state 81
    te_spec      go to state 82


state 79

   42 timing_specs: timing_spec .

    $default  reduce using rule 42 (timing_specs)


state 80

   43 timing_spec: del_spec .

    $default  reduce using rule 43 (timing_spec)


state 81

   44 timing_spec: tc_spec .

    $default  reduce using rule 44 (timing_spec)


state 82

   45 timing_spec: te_spec .

    $default  reduce using rule 45 (timing_spec)


state 83

   37 cell_instance: '(' . INSTANCE ')'
   38              | '(' . INSTANCE PATH ')'
   39              | '(' . INSTANCE IDENTIFIER ')'
   40              | '(' . INSTANCE '*' ')'

    INSTANCE  shift, and go to state 95


state 84

   35 add_cell: cell_type cell_instance .

    $default  reduce using rule 35 (add_cell)


state 85

  164 triple: NUMBER ':' NUMBER . ':'
  169       | NUMBER ':' NUMBER . ':' NUMBER

    ':'  shift, and go to state 96


state 86

  163 triple: NUMBER ':' ':' .
  165       | NUMBER ':' ':' . NUMBER

    NUMBER  shift, and go to state 97

    $default  reduce using rule 163 (triple)


state 87

  166 triple: ':' NUMBER ':' .
  167       | ':' NUMBER ':' . NUMBER

    NUMBER  shift, and go to state 98

    $default  reduce using rule 166 (triple)


state 88

  168 triple: ':' ':' NUMBER .

    $default  reduce using rule 168 (triple)


state 89

   36 cell_type: '(' CELLTYPE QSTRING . ')'

    ')'  shift, and go to state 99


state 90

   46 del_spec: '(' DELAY . deltypes ')'

    '('  shift, and go to state 100

    deltypes  go to state 101
    deltype   go to state 102


state 91

   49 tc_spec: '(' TIMINGCHECK . tchk_defs ')'

    '('  shift, and go to state 103

    tchk_defs  go to state 104
    tchk_def   go to state 105


state 92

   52 te_spec: '(' TIMINGENV . te_defs ')'

    '('  shift, and go to state 106
